--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+html_content = """
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,21 +7,32 @@
   <title>PDF Viewer</title>
   <style>
     body {
-      text-align: center;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       margin: 0;
       padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 20px;
     }
     iframe {
       width: 90%;
       height: 90vh;
       border: none;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
-  <h1>View PDF Document</h1>
-  https://www.dropbox.com/scl/fi/k9aaez2p7pndc1igd3fby/Processing-Operations-7-25-2025.pptx?rlkey=p02yhpgv1q4f9k8r4jx4j0tx8&st=n0tjh7lu&dl=0
+  <h1>Presentation Viewer</h1>
+  <iframe src="presentation.pdf"></iframe>
 </body>
 </html>
+"""
+
+with open("index.html", "w") as f:
+    f.write(html_content)
+
+print("index.html file has been created successfully.")
+
