--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PDF Viewer</title>
+  <title>Display</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -28,5 +27,3 @@
   <iframe src="Processing Operations 7-25-2025.pdf"></iframe>
 </body>
 </html>
-
-
