--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Presentation Viewer</h1>
+    <h1>Data Viewer</h1>
     <img src="DMD_logo.png" alt="Company Logo" class="logo">
   </div>
 
