--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       margin: 0;
-      padding: 20px;
+      padding: 15px;
     }
     .header {
       display: flex;
@@ -19,7 +19,7 @@
       margin-bottom: 20px;
     }
     .header h1 {
-      font-size: 24px;
+      font-size: 18px;
       margin: 0;
     }
     .logo {
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>Presentation Viewer</h1>
+    <h1>SampleTitle</h1>
     <img src="DMD_logo.png" alt="Company Logo" class="logo">
   </div>
 
