--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="viewer">
-    <img id="viewerImage" src="slideshow.gif" alt="Presentation">
+    <img id="viewerImage" src="slideshow1.gif" alt="Presentation">
   </div>
 
   <script>
