--- a/index.html
+++ b/index.html
@@ -2,24 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DMD Systems</title>
+  <title> DMD Systems Recovery</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background-color: black; /* optional */
+      background-color: black;
+      overflow: hidden;
+    }
+
+    #container {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
     }
 
     img {
-      display: block;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
+    }
+
+    #fullscreenBtn {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #fullscreenBtn:hover {
+      background-color: rgba(255, 255, 255, 0.3);
     }
   </style>
 </head>
 <body>
-  <img src="slideshow.gif" alt="Full Screen View">
+  <div id="container">
+    <img src="slideshow.gif" alt="Full Screen">
+    <button id="fullscreenBtn">Full Screen</button>
+  </div>
+
+  <script>
+    const button = document.getElementById('fullscreenBtn');
+    const container = document.getElementById('container');
+
+    button.addEventListener('click', () => {
+      if (container.requestFullscreen) {
+        container.requestFullscreen();
+      } else if (container.webkitRequestFullscreen) { // Safari
+        container.webkitRequestFullscreen();
+      } else if (container.msRequestFullscreen) { // IE11
+        container.msRequestFullscreen();
+      }
+    });
+  </script>
 </body>
 </html>
