--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
 <body>
   <div id="container">
     <img src="slideshow.gif" alt="Welcome to DMD slides">
-    <button id="fullscreenBtn" title="Fullscreen">🔳</button>
+     <button id="fullscreenBtn" title="Fullscreen">
+      <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M8 3H5a2 2 0 0 0-2 2v3"/>
+        <path d="M16 3h3a2 2 0 0 1 2 2v3"/>
+        <path d="M8 21H5a2 2 0 0 1-2-2v-3"/>
+        <path d="M16 21h3a2 2 0 0 0 2-2v-3"/>
+      </svg>
+    </button>
   </div>
 
   <script>
